--- a/style.css
+++ b/style.css
@@ -1,5 +1,131 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
- font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+}
+
+header {
+    background-color: #1F2937;
+    color: white;
+    padding: 24px;
+}
+
+.nav,
+.hero {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.nav {
+    padding-bottom: 24px;
+}
+
+.navigation {
+    display: flex;
+    gap: 20px;
+}
+
+.navigation a {
+    color: white;
+    text-decoration: none;
+}
+
+.hero{
+    padding-top: 48px;
+    padding-bottom: 48px;
+}
+
+.img img {
+    height: 350px;
+    width: auto;
+}
+
+.hero h1 {
+    font-weight: 900;
+    font-size: 48px;
+    color: #F9FAF8;
+}
+
+.nav .logo {
+    color: #F9FAF8;
+    font-size: 24px;
+}
+
+button {
+    background-color: #3882F6;
+    color: white;
+    height: 38px;
+    width: 128px;
+    border-radius: 12px;
+}
+
+.hero-content {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.hero-content p,
+h1 {
+    width: 512px;
+}
+
+.hero-content p {
+    color: #E5E7EB;
+    font-size: 18px;
+}
+
+.navigation a {
+    color: #E5E7EB;
+    font-size: 18px;
+}
+
+.logo p {
+    color: #F9FAF8;
+    font-size: 24px;
+    font-weight: 900;
+}
+
+.info-sec{
+    padding: 128px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.info-sec h2{
+    padding-bottom: 48px;
+    font-weight: 900;
+    font-size: 36px;
+}
+
+.cards{
+    display: flex;
+    gap: 80px;
+    color: gray;
+}
+
+.cards .image {
+    height: 128px;
+    width: 128px;
+    border: 6px solid #3882F6;
+    border-radius: 14px;
+}
+
+.card{
+    width: 156px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 10px;
+}
+
+.quote-sec{
+    background-color: #E5E7EB;
+    width: 512px;
 }
