added the quote section

--- a/style.css
+++ b/style.css
@@ -127,5 +127,21 @@ h1 {
 
 .quote-sec{
     background-color: #E5E7EB;
-    width: 512px;
+    width: full;
+    height: auto;
+    padding: 256px;
+    padding-top: 128px;
+    padding-bottom: 128px;
+}
+
+.quote{
+    font-size: 36px;
+    font-weight: 300;
+    color: #1F2937;
+}
+
+.writer{
+    text-align: end;
+    font-weight: 900;
+    font-size: 24px;
 }
