--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ button {
     height: 38px;
     width: 128px;
     border-radius: 12px;
+    border: none;
 }
 
 .hero-content {
@@ -144,4 +145,31 @@ h1 {
     text-align: end;
     font-weight: 900;
     font-size: 24px;
+}
+
+.call{
+    padding: 150px 100px 150px 100px;
+}
+
+.time{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: #3882F6;
+    height: 150px;
+    color: #F9FAF8;
+    border-radius: 16px;
+}
+
+.time button{
+    border: 3px solid #F9FAF8;
+}
+
+footer{
+    color: #F9FAF8;
+    background-color: #1F2937;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
